Compare zu Notebook geändert

--- a/GeneticAlgorithm/TestNotebooks/FitnessFunctionTest.ipynb
+++ b/GeneticAlgorithm/TestNotebooks/FitnessFunctionTest.ipynb
@@ -28,8 +28,7 @@
    "cell_type": "markdown",
    "source": [
     "# Test Fitness Funktionen\n",
-    "Teste die verschiedenen Fitness Funktionen und den Einfluss auf die Lösungen.\n",
-    "Ziel: Zeige, dass die Fitness Funktion einen Einfluss auf die Lösung hat und die Lösung nicht alleine von der FirstFit Heuristik abhängt"
+    "Teste die verschiedenen Fitness Funktionen und den Einfluss auf die Lösungen."
    ],
    "metadata": {}
   },
