Bug mit doppelten Objekten gefixt

--- a/Compare/Compare.ipynb
+++ b/Compare/Compare.ipynb
@@ -9,38 +9,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "source": [
     "# imports\n",
     "# add folder to syspath to import GeneticAlgorithm \n",
     "import os\n",
+    "import sys\n",
     "path = os.path.dirname(os.path.abspath(''))\n",
-    "print(path)\n",
     "sys.path.insert(0, path+'/GeneticAlgorithm')\n",
     "from GeneticAlgorithm import GeneticAlgorithm\n",
     "\n",
     "# add folder to syspath to import ParticleSwarmOptimization\n",
     "sys.path.insert(0, os.path.dirname(path)+'/ParticleSwarmOptimization')\n",
+    "\n",
     " # add folder to syspath to import ACO \n",
     "sys.path.insert(0, os.path.dirname(path)+'/AntColonyOptimization')\n",
     "\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "/Users/Tim/Documents/Uni/Uni_Bonn/Informatik/Semester4/Projektgruppe/NatureInspiredAlgorithms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "source": [
     "# lade die Probleme\n",
     "# small problem\n",
