--- a/GeneticAlgorithm/TestNotebooks/FitnessFunctionTest.ipynb
+++ b/GeneticAlgorithm/TestNotebooks/FitnessFunctionTest.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "source": [
     "# imports\n",
     "# add folder to syspath to import GeneticAlgorithm \n",
@@ -57,11 +57,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "source": [
     "# lade die Probleme\n",
     "# small problem\n",
     "small_objects  = np.load(os.path.join(path,'Compare/Ressources/betterproblem/small_objects.npy'))\n",
+    "print(small_objects.shape)\n",
     "small_container = np.load(os.path.join(path,'Compare/Ressources/betterproblem/small_container.npy'))\n",
     "small_optimal_solution = np.load(os.path.join(path, 'Compare/Ressources/betterproblem/small_optimal.npy'))\n",
     "# medium Problem\n",
@@ -83,6 +84,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
+      "(10, 2)\n",
       "Optimale Lösungen\n",
       "Kleines Problem 3\n",
       "Medium Problem 16\n",
