Average Fitness in Rückgabe von run hinzugefügt

--- a/GeneticAlgorithm/TestNotebooks/Fitness.ipynb
+++ b/GeneticAlgorithm/TestNotebooks/Fitness.ipynb
@@ -77,7 +77,7 @@
     "ax = [None] * len(gens)\n",
     "for i,generation in enumerate(gens):\n",
     "    GA = GeneticAlgorithm(objects, container_vol, container_weight, generation)\n",
-    "    solution ,_, _, _,_,_ = GA.run()\n",
+    "    solution ,_, _, _,_,_,_ = GA.run()\n",
     "    fitness_vals = np.zeros(len(solution.current_members))\n",
     "    for index,member in enumerate(solution.current_members):\n",
     "        fitness_vals[index] = Chromosome.fitness_fill(member)\n",
