--- a/Compare/ComparePSO.ipynb
+++ b/Compare/ComparePSO.ipynb
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2794,7 +2794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2815,16 +2815,17 @@
     }
    ],
    "source": [
+    "iterations = 100\n",
     "small_PSO_solution_bins = np.zeros(number_average) #wichtig\n",
     "small_PSO_runtime = np.zeros(number_average) #wichtig\n",
-    "small_PSO_gbest_bins = np.zeros((number_average, iterations))\n",
-    "small_PSO_average_bins = np.zeros((number_average, iterations)) #wichtig\n",
-    "small_PSO_best_bins = np.zeros((number_average, iterations)) #wichtig\n",
-    "small_PSO_worst_bins = np.zeros((number_average, iterations)) #wichtig\n",
-    "small_PSO_fitness = np.zeros((number_average, iterations)) #wichtig\n",
+    "small_PSO_gbest_bins = np.zeros((number_average, iterations+1))\n",
+    "small_PSO_average_bins = np.zeros((number_average, iterations+1)) #wichtig\n",
+    "small_PSO_best_bins = np.zeros((number_average, iterations+1)) #wichtig\n",
+    "small_PSO_worst_bins = np.zeros((number_average, iterations+1)) #wichtig\n",
+    "small_PSO_fitness = np.zeros((number_average, iterations+1)) #wichtig\n",
     "\n",
     "for i in range(number_average):\n",
-    "    PSO = ParticleSwarmOptimization(small_objects, small_container[0], small_container[1])\n",
+    "    PSO = ParticleSwarmOptimization(20, 100, small_objects, small_container[0], small_container[1], 0.4, 0.2, 0.01, 0.2, 0.4, 0.01, 'random', 'first_fit', 'first_fit')\n",
     "    _, small_PSO_solution_bins[i], small_PSO_runtime[i], small_PSO_gbest_bins[i], _, small_PSO_average_bins[i], small_PSO_best_bins[i], small_PSO_worst_bins[i], small_PSO_fitness[i], _, _, _ = PSO.run()\n",
     "    print(str(i) + ' done')\n",
     "    \n",
