--- a/Compare/CompareACO.ipynb
+++ b/Compare/CompareACO.ipynb
@@ -2841,24 +2841,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "number_average = 10\n",
-    "iterations = 50\n",
+    "iterations = 100\n",
     "ant_number = 10\n",
-    "b = 5\n",
+    "b = 2\n",
     "f = 2\n",
-    "µ = 5\n",
+    "µ = 1\n",
     "p = 0.95"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Lars\\Desktop\\NIA\\NatureInspiredAlgorithms_Code/AntColonyOptimization\\AntColonyOptimization.py:189: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "  solutions = np.array(solutions)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
