--- a/Compare/CompareGA.ipynb
+++ b/Compare/CompareGA.ipynb
@@ -3,7 +3,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Vergleich der Algorithmen"
+    "# Vergleich der Algorithmen\n",
+    "erzeuge für alle Probleme (new_problems) und die Algorithmen (GA, FF, FFD) .npy Dateien um diese später auszuwerten "
    ],
    "metadata": {}
   },
@@ -173,7 +174,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# FF"
+    "# FF\n",
+    "Erstelle die Lösungen für FF"
    ],
    "metadata": {}
   },
@@ -198,6 +200,14 @@
     "        np.save(f'Solutions/new_{problem_size}_{problem_number}_FF_runtime.npy', runtimes)"
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# FFD\n",
+    "Erstelle die Lösungen für FFD"
+   ],
    "metadata": {}
   },
   {
@@ -433,7 +443,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# GA"
+    "# GA\n",
+    "erstelle die Lösungen für den GA (Achtung grade nicht aktuell, da Schnittstelle noch nicht angepasst.)"
    ],
    "metadata": {}
   },
@@ -3029,9 +3040,8 @@
    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
   },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.9.1 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3043,7 +3053,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
