--- a/GeneticAlgorithm/TestNotebooks/Fitness.ipynb
+++ b/GeneticAlgorithm/TestNotebooks/Fitness.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Visualisierung der Fitness in der Population"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "source": [
@@ -39,12 +46,7 @@
     "#resize\n",
     "new_medium_objects.shape = (250,2)\n",
     "#medium_container = np.load(os.path.join(path,'Ressources/newproblem/new_medium1-100.npy'))\n",
-    "new_medium_container = np.array([100,100])\n",
-    "\n",
-    "print('Optimale Lösungen')\n",
-    "print(f'Kleines Problem {small_optimal_solution}')\n",
-    "print(f'Medium Problem {medium_optimal_solution}')\n",
-    "print(f'Großes Problem {large_optimal_solution}')"
+    "new_medium_container = np.array([100,100])\n"
    ],
    "outputs": [
     {
