--- a/GeneticAlgorithm/TestNotebooks/SamplingMethod.ipynb
+++ b/GeneticAlgorithm/TestNotebooks/SamplingMethod.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Compare Sampling Method \n",
+    "Tests zum Vergleich der Sampling Methode "
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "source": [
@@ -39,12 +47,7 @@
     "#resize\n",
     "new_medium_objects.shape = (250,2)\n",
     "#medium_container = np.load(os.path.join(path,'Ressources/newproblem/new_medium1-100.npy'))\n",
-    "new_medium_container = np.array([100,100])\n",
-    "\n",
-    "print('Optimale Lösungen')\n",
-    "print(f'Kleines Problem {small_optimal_solution}')\n",
-    "print(f'Medium Problem {medium_optimal_solution}')\n",
-    "print(f'Großes Problem {large_optimal_solution}')"
+    "new_medium_container = np.array([100,100])"
    ],
    "outputs": [
     {
@@ -66,11 +69,7 @@
    "source": [
     "def plot_sampling_method_compare(objects, optimal_solution, container_vol, container_weight, xlim, ylim):\n",
     "    av_number = 10\n",
-    "    number_generations = 80\n",
-    "    pop_size = 60\n",
-    "    crossover_prob = 0.7\n",
-    "    mutation_prob = 0.1\n",
-    "    fit_heuristic = 'first_fit'\n",
+    "    number_generations = 30\n",
     "    amount_obj = len(objects)\n",
     "\n",
     "    average_vals_roulette = np.zeros((av_number, number_generations))\n",
@@ -84,10 +83,10 @@
     "    ax = [None] * 2\n",
     "\n",
     "    for index in np.arange(av_number):\n",
-    "        GA = GeneticAlgorithm(objects, pop_size, container_vol, container_weight, crossover_prob, mutation_prob, number_generations, fitness_function='fill', fit_heuristic = fit_heuristic, sampling_method ='roulette_wheel_sampling')\n",
-    "        _,_, average_vals_roulette[index], best_vals_roulette[index],_,_ = GA.run()\n",
-    "        GA = GeneticAlgorithm(objects, pop_size, container_vol, container_weight, crossover_prob, mutation_prob, number_generations, fitness_function='fill', fit_heuristic = fit_heuristic, sampling_method ='tournament_selection')\n",
-    "        _,_, average_vals_tour[index], best_vals_tour[index],_,_ = GA.run()\n",
+    "        GA = GeneticAlgorithm(objects, container_vol, container_weight, sampling_method ='roulette_wheel_sampling')\n",
+    "        _,_,_, average_vals_roulette[index], best_vals_roulette[index],_,_,_ = GA.run()\n",
+    "        GA = GeneticAlgorithm(objects, container_vol, container_weight, sampling_method ='tournament_selection')\n",
+    "        _,_,_, average_vals_tour[index], best_vals_tour[index],_,_,_ = GA.run()\n",
     "\n",
     "    # calc average\n",
     "    average_vals_roulette = np.average(average_vals_roulette, 0)\n",
